--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,2 +1,9 @@
 @import "tailwindcss";
+
+@layer components{
+    .footer__link{
+        @apply text-white font-semibold cursor-pointer text-sm hover:text-yellow-400 w-fit;
+    }
+}
+
 @custom-variant dark (&:where(.dark, .dark *));
